<resources>
    <string name="app_name">佰材网</string>
    <string name="default_text">--</string>
    <string name="exit_hint">再次点击返回退出程序</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="input">请填写</string>
    <string name="choose">请选择</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="check_all">全选</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="goods">商品</string>
    <string name="shop">店铺</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="seconds">秒</string>
    <string name="success">成功</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_title">输入密码</string>
    <string name="input_verifiy_code">请输入验证码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_confirm_pwd">请确认密码</string>
    <string name="get_verifiy_code">获取验证码</string>
    <string name="register_reminder">(请在60秒内完成验证，超时请点击重新发送)</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="password_hint">密码(6～16位数字和字母组成)</string>
    <string name="password_repeat_hint">确认密码(需要同密码一致)</string>
    <string name="agree_protocol">同意《用户协议》和《法律声明》</string>
    <string name="user_register_protocol">用户注册协议</string>
    <string name="home_search_hint">输入要寻找的宝贝</string>
    <string name="home_classify">商品分类</string>
    <string name="home_classify_more">更\n多</string>
    <string name="classify_title">分类</string>
    <string name="shopping_title">购物车</string>
    <string name="shopping_settle">结算（%d）</string>
    <string name="shopping_total">合计：</string>
    <string name="shopping_no_stock">无货</string>
    <string name="shopping_update_count">修改购买数量</string>
    <string name="own_logout">退出登录</string>
    <string name="own_account">账户信息</string>
    <string name="own_order_payment">待付款</string>
    <string name="own_order_send">待发货</string>
    <string name="own_order_receive">待收货</string>
    <string name="own_order_refund">退货订单</string>
    <string name="own_order_all">全部订单</string>
    <string name="own_msg">消息中心</string>
    <string name="own_collect">我的收藏</string>
    <string name="own_vip">会员服务</string>
    <string name="own_about">关于我们</string>
    <string name="own_feedback">意见反馈</string>
    <string name="own_browsing">浏览记录</string>
    <string name="own_coupon">我的优惠券</string>
    <string name="own_share">分享应用</string>
    <string name="account_title">账户信息</string>
    <string name="account_portrait">头像</string>
    <string name="account_nickname">用户昵称</string>
    <string name="account_email">邮箱</string>
    <string name="account_company">公司名称</string>
    <string name="account_sex">性别</string>
    <string name="account_area">所在地区</string>
    <string name="account_qq">QQ</string>
    <string name="account_address">地址管理</string>
    <string name="account_phone">手机</string>
    <string name="account_pwd">修改密码</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_type">请选择反馈类型</string>
    <string name="feedback_complain">商品投诉</string>
    <string name="feedback_experience">体验问题</string>
    <string name="feedback_product_hint">请输入商品编号</string>
    <string name="feedback_opinion_hint">请输入反馈意见或投诉意见，投诉请标明商品名称或店铺名称</string>
    <string name="feedback_phone_title">您也可以拨打电话联系我们</string>
    <string name="feedback_phone"><u>400-2250-1123</u></string>
    <string name="about_problem">常见问题</string>
    <string name="vip_problem">问题解答</string>
    <string name="tender_screening">筛选</string>
    <string name="tender_choose">已选择：</string>
    <string name="address_title">地址管理</string>
    <string name="address_insert">新建地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="address_default">默认地址</string>
    <string name="address_contact_name">收货人</string>
    <string name="address_contact_phone">联系电话</string>
    <string name="address_area">所在地区</string>
    <string name="address_desc">详细地址</string>
    <string name="order_payment">待付款</string>
    <string name="order_send">待发货</string>
    <string name="order_receive">待收货</string>
    <string name="order_refund">退货订单</string>
    <string name="order_complete">已完成订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_freight">运费</string>
    <string name="order_number">共计%d件宝贝    合计：</string>
    <string name="order_freight_hint">(含运费 ¥ %s)</string>
    <string name="order_btn_cancel">取消订单</string>
    <string name="order_btn_payment">付款</string>
    <string name="order_btn_refund">退款</string>
    <string name="order_btn_remind">提醒发货</string>
    <string name="order_btn_logistics">查看物流</string>
    <string name="order_btn_confirm">确认收货</string>
    <string name="order_btn_delete">删除订单</string>
    <string name="order_btn_appraise">评价</string>
    <string name="order_insert_title">填写订单</string>
    <string name="order_submit">提交订单</string>
    <string name="order_insert_count">共%d件</string>
    <string name="order_choose_address">请选择收货地址</string>
    <string name="order_detail">订单详情</string>
    <string name="order_phone_hint">平台服务电话：%s</string>
    <string name="order_state">订单状态：</string>
    <string name="order_state_seller">卖家处理</string>
    <string name="order_state_complete">交易完成</string>
    <string name="order_state_hint">剩余0天12小时自动确认</string>
    <string name="order_reason_refund">退款原因</string>
    <string name="order_reason_refuse">拒绝原因</string>
    <string name="order_no_refund">退款编号：</string>
    <string name="order_date_apply">申请时间：</string>
    <string name="order_date_confirm">确认时间：</string>
    <string name="order_no">订单编号：</string>
    <string name="order_date_payment">付款时间：</string>
    <string name="order_date_send">发货时间：</string>
    <string name="order_insert_address">请选择收货地址</string>
    <string name="refund_apply">退款申请</string>
    <string name="refund_edit_hint">请输入退款原因</string>
    <string name="apply_success">申请成功</string>
    <string name="refund_confirm_hint">是否对当前订单退款?</string>
    <string name="refund_apply_hint">请等待卖家确认，卖家确\n认退款后，请的货款将原路返回</string>
    <string name="order_appraise">评价订单</string>
    <string name="order_appraise_score">评分：</string>
    <string name="order_appraise_hint">您对宝贝有什么评价～写出来吧～</string>
    <string name="order_appraise_text_count">还可以输入%s个字</string>
    <string name="logistics_info">物流信息</string>
    <string name="logistics_comapny">物流公司</string>
    <string name="logistics_no">运单号</string>
    <string name="logistics_phone">联系电话</string>
    <string name="event_title">活动详情</string>
    <string name="event_goods">- 促销商品 -</string>
    <string name="event_date">距离活动结束还剩</string>
    <string name="search_clear_history">清空历史记录</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="sorting_comprehensive">综合</string>
    <string name="sorting_sales">销量</string>
    <string name="sorting_price">价格</string>
    <string name="sorting_score">评分</string>
    <string name="filter">筛选</string>
    <string name="address_choose">地址选择</string>
    <string name="address_filter_toast">请选择城市</string>
    <string name="tender_detail_title">招标详情</string>
    <string name="goods_number">编号：%s</string>
    <string name="goods_freight">运费：%s</string>
    <string name="goods_stock">库存：%s件</string>
    <string name="goods_stock_dialog">库存%s件</string>
    <string name="goods_shop">进店逛逛</string>
    <string name="goods_choose">已选择：</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_appraise">商品评价</string>
    <string name="goods_recommend">- 店家推荐 -</string>
    <string name="goods_appraise_see">查看全部评价</string>
    <string name="goods_appraise_title">全部评价</string>
    <string name="goods_add_shopping">加入购物车</string>
    <string name="goods_buy_now">立即购买</string>
    <string name="goods_buy_count">购买数量</string>
    <string name="goods_comment_count">%s条评论</string>
    <string name="follow">关注</string>
    <string name="follow_cancel">取消关注</string>
    <string name="shop_follow_count">关注：</string>
    <string name="shop_sort">分类查找</string>
    <string name="shop_event">店铺活动</string>
    <string name="shop_contact">联系卖家</string>
    <string name="shop_goods_sort">商品分类</string>
    <string name="shop_coupon_quota">满%s可用</string>
    <string name="pay_confirm_title">确认支付</string>
    <string name="pay_once">立即支付</string>
    <string name="pay_mode">支付方式</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_unionpay">银联</string>
    <string name="pay_wechat">微信</string>
    <string name="pay_coupon">优惠券</string>
    <string name="pay_unuse">未使用</string>
    <string name="pay_freight">运费</string>
    <string name="pay_goods_amount">宝贝金额</string>
    <string name="pay_real_amount">实付金额</string>
    <string name="pay_old_amount">(修改前 ¥ %s)</string>
    <string name="pay_continue">继续支付</string>
    <string name="pay_update_amount_hint">您购买的宝贝修改了价格</string>
    <string name="pay_result_title">支付状态</string>
    <string name="pay_success">订单支付成功</string>
    <string name="pay_success_hint">您的订单支付成功，我们会尽快安排发货</string>
    <string name="pay_fail">订单支付失败</string>
    <string name="pay_fail_hint">请查看网络环境及支付环境是否正常</string>
    <string name="pay_goto">去支付</string>
    <string name="coupon_own_title">我的优惠券</string>
    <string name="coupon_choose_title">使用优惠券</string>
    <string name="coupon_expired">已失效的券</string>
    <string name="coupon_date">期限：%1$s至%2$s</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="to">至</string>

    <string name="toast_network_fail">网络错误，请重试</string>
    <string name="toast_input_phone">请输入正确手机号</string>
    <string name="toast_input_verify">请输入验证码</string>
    <string name="toast_input_pwd">请输入6～16位数字和字母密码</string>
    <string name="toast_input_old_pwd">请输入原密码</string>
    <string name="toast_repeat_pwd">两次密码输入不一致</string>
    <string name="toast_check_protocol">您必须先同意用户注册协议才能注册</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_pwd_success">密码修改成功</string>
    <string name="toast_address_input_name">请输入收货人姓名</string>
    <string name="toast_address_input_phone">请输入收货人联系电话</string>
    <string name="toast_address_input_area">请选择所在地区</string>
    <string name="toast_address_input_address">请输入详细地址</string>
    <string name="toast_address_delete_confirm">确定要删除该地址吗？</string>
    <string name="toast_goods_stock">数量超出范围～</string>
    <string name="toast_goods_type">请先选择分类</string>
    <string name="toast_cart_no_choose">您没有选择商品哦</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
