<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    tools:context="com.kswl.baimucai.activity.setting.FeedbackActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/feedback_type"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/xml_oval_checkbox_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/feedback_complain"
            android:textColor="@color/text_black"
            android:textSize="15sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:button="@drawable/xml_oval_checkbox_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/feedback_experience"
            android:textColor="@color/text_black"
            android:textSize="15sp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:hint="@string/feedback_product_hint"
        android:lines="1"
        android:padding="12dp"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="@string/feedback_opinion_hint"
        android:lines="5"
        android:padding="12dp"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_submit"
        style="@style/btn_solid_style"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:text="@string/submit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/feedback_phone_title"
        android:textColor="@color/text_dark_gray"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/feedback_phone"
        android:textColor="@color/text_orange"
        android:textSize="18sp"/>
</LinearLayout>
