<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context="com.kswl.baimucai.activity.search.SortingFragment">

    <TextView
        android:id="@+id/tv_sorting_comprehensive"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sorting_comprehensive"
        android:textColor="@color/text_orange"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_sorting_sales"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sorting_sales"
        android:textColor="@color/text_dark_gray"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/ll_sorting_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sorting_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@mipmap/price_normal_icon"
            android:gravity="center"
            android:text="@string/sorting_price"
            android:textColor="@color/text_dark_gray"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sorting_score"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sorting_score"
        android:textColor="@color/text_dark_gray"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@color/text_dark_gray"
        android:textSize="18sp"/>
</LinearLayout>
