<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    tools:context="com.kswl.baimucai.activity.account.UpdatePwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/input_old_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <EditText
            android:id="@+id/et_pwd_repeat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/input_confirm_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/btn_solid_style"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:text="@string/save"/>

</LinearLayout>
